--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -6,8 +6,13 @@
 </head>
 <body>
 <h1>Hello World!</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias atque dignissimos eos quisquam reiciendis vitae!
-    Accusantium, aliquam et exercitationem, fugiat iure magnam molestias optio provident, quia similique ullam veniam?
-    Architecto.</p>
+<div>
+    <a href="test" target="_self">Test twig</a>
+</div>
+<div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias atque dignissimos eos quisquam reiciendis vitae!
+        Accusantium, aliquam et exercitationem, fugiat iure magnam molestias optio provident, quia similique ullam
+        veniam? Architecto.</p>
+</div>
 </body>
 </html>
