--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -1,7 +1,7 @@
 <nav>
     <ul>
-        <li><a href="#">Test 1</a></li>
-        <li><a href="#">Test 2</a></li>
+        <li><a href="{{ path('home') }}">Home</a></li>
+        <li><a href="{{ path('test') }}">Test</a></li>
         <li><a href="#">Test 3</a></li>
     </ul>
 </nav>
