2020-08-26 1647 : MOD5 DEMO2 - Doctrine : EntityManager

--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -2,6 +2,8 @@
     <ul>
         <li><a href="{{ path('home') }}">Home</a></li>
         <li><a href="{{ path('test') }}">Test</a></li>
-        <li><a href="#">Test 3</a></li>
+        <li><a href="{{ path('serie_list') }}">Serie/List</a></li>
+        <li><a href="{{ path('serie_add') }}">Serie/Add</a></li>
+        <li><a href="#">Refresh</a></li>
     </ul>
 </nav>
