2020-08-26 2301 : MOD5 DEMO3 - Doctrine : Repository (R de CRUD)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,60 @@
 body {
-    background-color: tomato;
+    margin: 0;
+    font-family: 'Cairo', sans-serif;
+}
+
+.container {
+    min-width: 360px;
+    max-width: 1000px;
+    margin: auto;
+    padding: 10px 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.site-title {
+    display: flex;
+    align-items: center;
+    font-size: 48px;
+}
+
+.site-title img {
+    height: 48px;
+    display: block;
+    margin-right: 5px;
+}
+
+header nav ul {
+    margin: 5px 0;
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+}
+
+header nav a {
+    display: block;
+    padding: 5px 8px;
+    margin-right: 10px;
+}
+
+main {
+    padding: 30px 0;
+    border-top: 1px solid #D3D3D3;
+    border-bottom: 1px solid #D3D3D3;
+}
+
+h1 {
+    margin: 0;
+}
+
+footer {
+    padding: 20px 0;
+    text-align: center;
 }
