--- a/templates/serie/detail.html.twig
+++ b/templates/serie/detail.html.twig
@@ -1,10 +1,10 @@
 {% extends 'layout.html.twig' %}
 
 {% block main %}
-    <h2>Details!</h2>
-
-    {# todo: afficher le détail d'une serie #}
+    <h2>{{ serie.name }}</h2>
+    <div>{{ serie.overview }}</div>
+    <div>{{ serie.genres }}</div>
 
 {% endblock %}
 
-{%  block title %}{{ parent() }} | Détail{% endblock %}
+{% block title %}{{ parent() }} | Détail{% endblock %}
