2020-08-27 1750 : MOD6 DEMO2 - Form : Affichage formulaire (de base)

--- a/templates/serie/add.html.twig
+++ b/templates/serie/add.html.twig
@@ -1,10 +1,16 @@
 {% extends 'layout.html.twig' %}
 
 {% block main %}
-    <h2>New Serie!</h2>
+    <h2>Add a serie !</h2>
 
     {# todo: afficher un formulaire #}
+    {{ form_start(serieForm) }}
+    {{ form_widget(serieForm) }}
+
+    <button type="submit">Save</button>
+
+    {{ form_end(serieForm) }}
 
 {% endblock %}
 
-{%  block title %}{{ parent() }} | Ajout{% endblock %}
+{% block title %}{{ parent() }} | Ajout{% endblock %}
