2020-09-01 1437 : MOD7 DEMO4 - Doctrine : Manipulation Entités Associées

--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -4,6 +4,7 @@
         <li><a href="{{ path('test') }}">Test</a></li>
         <li><a href="{{ path('serie_list') }}">Serie/List</a></li>
         <li><a href="{{ path('serie_add') }}">Serie/Add</a></li>
+        <li><a href="{{ path('tmdb') }}">TMDB API</a></li>
         <li><a href="#">Refresh</a></li>
     </ul>
 </nav>
