--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -46,7 +46,10 @@
         {% block main %}{% endblock %}
     </main>
 
-    <footer>
+    <div id="content-wrap">
+        <!-- all other page content -->
+    </div>
+    <footer id="footer">
         &copy; {{ "now" | date("Y") }} Series!
     </footer>
 </div>
