--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,17 @@ body {
     font-family: 'Cairo', sans-serif;
 }
 
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Footer height */
+}
+
+#content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+}
+
 .flash {
     padding: 20px;
     display: block;
